# em-spapi-celery

./: .gitignore  README.md  pyproject.toml  spapi_fetch_offers.py
deploy/: README.md  config.ini.example  install.sh
deploy/conf.d/: em_celery.example
deploy/mi01eu/: DEPLOYMENT.md  config.ini.skeleton  em_celery.conf.skeleton
deploy/systemd/: em-spapi-celery-catalog-worker.service  em-spapi-celery-offer-worker.service
docs/: ENTRY_POINTS.md  OFFER_PIPELINE.md  PRIORITY_QUEUE.md  SPAPI_AUTH_ISOLATION.md  SPAPI_CORE.md  SPAPI_RATE_LIMITING.md  SYNC_FETCH_OFFERS.md  TECHNICAL.md
em_celery/: __init__.py  config.py  paths.py  runtime.py  worker.py
em_celery/scheduling/: __init__.py  kombu_priority_patch.py  priority.py  send.py
em_celery/tasks/: __init__.py  base.py  spapi_update_catalog_items_task.py  spapi_update_item_offers_task.py  worker_meta.py
em_celery/tools/: _sender_common.py  amazon_product_ref.py  spapi_fetch_item_offers_sync.py  spapi_update_all_catalog_items_task_send_from_es.py  spapi_update_all_item_offers_task_send_from_es.py  spapi_update_catalog_items_task_send_from_es.py  spapi_update_catalog_items_task_sender.py  spapi_update_item_offers_task_send_from_es.py  spapi_update_item_offers_task_sender.py  telegram_test_send.py
em_celery/utils/: amz_offers_updater.py  config_loaders.py  offers_update_run_stats.py  telegram_bot.py
em_tasks/: __init__.py
em_tasks/spapi/: __init__.py  spapi_catalog_items_parser.py
em_tasks/tasks/: spapi_update_catalog_items_task.py  spapi_update_item_offers_task.py  task_stats_doc.py
em_tasks/utils/: product_service.py
local_dev/: LOCAL_TESTING.md  config.ini.sample  docker-compose.yml  inspect_queue.py  run_local_worker.sh  sample_asins.txt  smoke_test_dispatch.py
tests/integration/: conftest.py  test_offer_service.py
tests/scheduling/: test_priority.py  test_priority_integration.py
tests/tasks/: test_task_stats_doc.py  test_telegram_alerts.py
(+3 files in other folders)
